SERVER-16740 Log contents instead of pointer address in shardCollection failure